wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
/* ... */
#content .h4-styling {
  color: #6c64ad;
  font-family: "proxima-nova", sans-serif;
  font-size: 1em;
  font-weight: 600;
  margin-bottom: 12px;
  text-transform: uppercase;
}
.difficulty {
	float: right;
	font-weight: 600;
	letter-spacing: 0.1em;
	color: #D43900;
	font-size: 0.9em;
	position: absolute;
	right: 2.5em;
	top: 1.75em;
}
.bcc-box.bcc-success h3,
.linkitup h3,
.keytakeaways h3,
.tryit h3 {
	background-color: #077fab;
}
.bcc-box h3:first-child,
.linkitup h3:first-child,
.keytakeaways h3:first-child,
.tryit h3:first-child {
	text-align: center;
	margin: -2% -3% 15px;
	color: #ffffff;
	padding: 15px 0 15px;
}
#content iframe {
  min-width: 100%;
  max-width: 100%;
  margin: 1em auto;
}
#content table {
	margin: 1em 0;
  border: none;
}

/*Footer*/
.footer {
  text-align: center;
  background: #fafafa;
  padding: 2em;
  border-top: 1px solid #e1e1e1;
  margin-top: 3em;
  color: #959595;
  font-family: "proxima-nova", sans-serif;
  font-size: 0.9em;
}
.footer a {
	color: #077fab !important;
}
.license-attribution img {
  margin-bottom: 0.5em;
  margin-top: 1em;
}
.footer table td {
	padding: 0.5em !important;
}
.title-area {
	border-bottom: 1px solid #e1e1e1;
	text-align: center;
}
h2.entry-title-1 {
	text-align: center;
	font-size: 1.5em;
	margin-top: 0;
	margin-left: 0em;
	margin-bottom: 0.1em !important;
	padding-top: 1em !important;
	color: #1d1d1d;
	font-weight: 600;
	border-bottom: none;
	padding-bottom: 0;
}
h3.type-1 {
	text-transform: uppercase;
	color: #959595;
	margin-top: 0 !important;
	font-size: 0.9em !important;
	letter-spacing: 0.05em;
	margin-bottom: 1.4em;
	font-weight: 400;
}
h2.entry-title-2 {
	text-align: left;
	font-size: 1.5em;
	margin-top: 0;
	margin-left: 0em;
	margin-bottom: 0 !important;
	padding-top: 1em !important;
	color: #1d1d1d;
	font-weight: 600;
	border-bottom: none;
	padding-bottom: 0;
	width: 85%;
	line-height: 1.2;
}
h3.type-2 {
	text-transform: uppercase;
	color: #646464;
	line-height: 1.3;
	margin-top: 0.2em !important;
	font-size: 0.9em !important;
	letter-spacing: 0.05em;
	margin-bottom: 1.4em;
	font-weight: 400;
	text-align: left;
	width: 80%;
}
h2.entry-title-3 {
	text-align: left;
	font-size: 1.5em;
	margin-top: 0;
	margin-left: 0em;
	margin-bottom: 0 !important;
	padding-top: 1em !important;
	color: #1d1d1d;
	font-weight: 600;
	border-bottom: none;
	padding-bottom: 0;
}
h3.type-3 {
	text-transform: uppercase;
	color: #959595;
	margin-top: 0 !important;
	font-size: 0.9em !important;
	letter-spacing: 0.05em;
	margin-bottom: 0.5em;
	font-weight: 400;
	text-align: left;
}
.progress {
	margin-bottom: 1.25em;
}
.course-progress {
	background: #e1e1e1;
	border: none;
	padding: 0;
	height: 0.4em;
}
.progress.success .meter {
	background: #6c64ad;
}
.progress-description {
	font-size: 0.8em;
	color: #959595;
	margin-top: 0.25em;
}
.difficulty {
  right: 2.75em;
  top: 2.1em;
}
img.type-icon {
	float: left;
	max-width: 2.6em;
	background: none;
	margin-right: 0.4em;
}
ol li li::before, ol li li li::before {
  list-style-position: outside;
  content: none;
  counter-increment: none;
}
.edit-page-btn {
  margin: 15px 0 30px 0;
  height: 34px;
}
#edit {
  font-size: 10pt;
  font-weight: 600;
  color: #26a69a;
  text-decoration: none;
  border: 2px solid #26a69a;
  border-radius: 7px;
  background-color: rgba(38, 166, 154, 0.1);
  padding: 9px 23px;
  text-align: center;
  text-decoration: none;
}
.bottom-nav-buttons {
  height: 38px;
  margin: 18px 0 30px 0;
  padding: 30px 0 0 0;
  border-top: 1px solid #6d6d6d;
}
.page-nav-btn {
  font-size: 10pt;
  font-weight: 600;
  color: #077fab;
  text-decoration: none;
  border: 2px solid #077fab;
  border-radius: 7px;
  padding: 5px 25px;
  width: 135px;
  text-align: center;
}
#prev {
  float: left;
}
#next {
  float: right;
}
.end-page-heading-section {
  margin-top: -18px;
  border-bottom: solid 1px #e1e1e1;
  display: block;
}
.end-page-heading-section .type-icon {
  width: 31px;
  padding: 0;
}
.lumen-footer-logo {
  background: #fafafa;
  margin-bottom: -.3em;
  padding: 0;
}


/******************************/
/*  STUDY PLAN PAGE-SPECIFIC  */
/******************************/

/***************************/
/*  SUB NAV HEADER/FOOTER  */
/***************************/

.row {
  background-color: #fff;
}
.columns {
  padding: 0;
}
.title-row {
  position: relative;
  height: 69px;
  width: 100%;
  background-color: #fff;
}
.title-row-content, .subheader-content {
  position: absolute;
  top: 50%;
  margin: 0 100px;
}
.title-row-content {
  transform: translateY(-45%);
}
.subheader-content {
  transform: translateY(-50%);
}
.subheader {
  margin: 0;
  height: 160px;
}
.content-image {
  width: 175px;
  height: 100px;
  float: left;
}
.content-image img {
  height: 100px;
  margin: 0 42px;
  padding: 0;
}
.content-description {
  margin-top: 20px;
  width: 750px;
}
#why-it-matters, #putting-it-together {
  background-color: #007A7C;
}
#what-you-know {
  background-color: #eee;
}
#why-it-matters h2, #why-it-matters p,
#putting-it-together h2, #putting-it-together p,
#quiz h2, #quiz p {
  color: #fff;
}
#quiz {
  background-color: #077fab;
}


/**************************/
/*  MAIN CHAPTER CONTENT  */
/**************************/

.chapters {
  left: 100px;
  width: 100%;
  margin: 8px auto 8px 0;
  box-shadow: 0 1px 10px #a5a5a5;
  border-radius: 5px;
  background-color: #fff;
  align: left;
}
.chapters-container {
  width: 800px;
}
.chapter-content {
  margin: 30px 20px 20px 0; /* QUESTIONABLE... */
}
.chapter-content h3 {
  margin-bottom: 16px;
}
.chapter-links {
  border: none;
  border-collapse: separate;
  padding: 0;
  margin: 5px 0 0 0;
  max-width: 600px;
  width: 600px;
  outline: 0;
}
.chapter-links td {
  font-size: 0.7em;
  padding: 0;
}
.chapter-links .left-column {
  width: 435px;
}
.chapter-links a {
  text-decoration: underline;
  color: #3498db;
}
.chapter-content h5 {
  line-height: 1.5em;
}
.license-attribution {
  background: #fafafa;
}

